--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ attrs==18.2.0
 click==6.7
 flake8==3.5.0
 Flask==1.0.2
+Flask-SQLAlchemy==2.3.2
 isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
@@ -17,7 +18,9 @@ pycodestyle==2.3.1
 pyflakes==1.6.0
 pylint==2.1.1
 pytest==3.8.0
+python-decouple==3.1
 six==1.11.0
+SQLAlchemy==1.2.12
 typed-ast==1.1.0
 Werkzeug==0.14.1
 wrapt==1.10.11
